--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,4 +2,5 @@
 # For more information about default variables see:
 # http://www.ansibleworks.com/docs/playbooks_variables.html#id26
 
+# set timezone
 timezone: 'Europe/Berlin'
