--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,3 @@
 ---
 
-- name: Configuring timezone
-  template: >
-    src=etc-timezone.j2
-    dest=/etc/timezone
-    owner=root
-    group=root
-    mode=0644
-  notify: reconfigure tzdata
-  tags:
-    - system
-    - timezone
+- include: config.yml
