--- a/test.yml
+++ b/test.yml
@@ -1,11 +1,7 @@
 ---
 
 - hosts: all
-  handlers:
-    - include: 'handlers/main.yml'
-  vars_files:
-    - 'defaults/main.yml'
-  tasks:
-    - include: 'tasks/main.yml'
-      vars:
-        timezon: 'Europe/Berlin'
+  roles:
+    - franklinkim.timezone
+  vars:
+    timezon: 'Europe/Berlin'
